# AndroidPhone-Assistant-Linux

./: .gitignore  README.md
src/: CMakeLists.txt  TerminalTestMain.cpp
src/Android-Server/: local.properties
src/Android-Server/app/: build.gradle  proguard-rules.pro
src/Android-Server/app/src/androidTest/java/com/buptsse/zero/phoneassistant/: ApplicationTest.java
src/Android-Server/app/src/main/: AndroidManifest.xml
src/Android-Server/app/src/main/aidl/android/content/pm/: IPackageStatsObserver.aidl
src/Android-Server/app/src/main/java/com/buptsse/zero/phoneassistant/: DaemonSocketService.java  MainActivity.java  SessionDaemonThread.java  SessionThread.java  SocketDaemonService.java  SocketService.java  SocketThread.java
src/Android-Server/app/src/main/java/com/buptsse/zero/phoneassistant/phoneinfoprovider/: AppInfo.java  AppInfoReader.java  ContactInfo.java  ContactInfoReader.java  SMSInfo.java  SMSInfoReader.java
src/Android-Server/app/src/main/res/layout/: activity_main.xml
src/Android-Server/app/src/main/res/values/: strings.xml
src/Android-Server/app/src/test/java/com/buptsse/zero/phoneassistant/: ExampleUnitTest.java
src/Android-Server/gradle/wrapper/: gradle-wrapper.properties
src/AndroidTools/: PhoneAssistant.apk
src/PC-Client/: CMakeLists.txt  GUITestMain.cpp  Main.cpp  TerminalTestMain.cpp
src/PC-Client/GUI/: AppManagementWindow.cpp  AppManagementWindow.h  AppManagementWindow.ui  CompileUIFiles.sh  ContactBackupWindow.cpp  ContactBackupWindow.h  ContactBackupWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SMSBackupWindow.cpp  SMSBackupWindow.h  SMSBackupWindow.ui
src/PC-Client/GUI/res/: CompileQRCFiles.sh  Icon.qrc
src/PC-Client/adb-tools/: ADBTools.cpp  ADBTools.h
src/PC-Client/info-provider/: AppInfo.h  ContactInfo.h  PhoneInfo.h  SMSInfo.h
src/PC-Client/tools/: CommandTools.cpp  CommandTools.h  GTKTools.cpp  GTKTools.h  PipeTools.cpp  PipeTools.h  SMSAndContactBackup.cpp  SMSAndContactBackup.h  SocketTools.cpp  SocketTools.h
src/adb-tools/: ADBTools.cpp  ADBTools.h
src/tools/: CommandTools.cpp  CommandTools.h  PipeTools.cpp  PipeTools.h
